Make sure profile background is behind the actual content.

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -3,6 +3,7 @@
     position: relative;
     background-color: black;
     padding: 16px 0;
+    z-index: 1000;
     .background {
       opacity: 0.2;
       background: url('../assets/img/logo.png') no-repeat center center;
@@ -10,6 +11,7 @@
       width: 100%;
       height: 100%;
       position: absolute;
+      z-index: -100;
     }
 
     img {
